# distributor

./: .gitignore  Cargo.toml
programs/merkle-distributor/idl/: merkle_distributor.json
programs/merkle-distributor/src/: lib.rs
rust-tests/: Cargo.toml
